--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="home-content">
       <div class="text">
         <div class="text-one">Hello,</div>
-        <div class="text-two">I'm Gianluca B.</div>
+        <div class="text-two">I'm Gianluca Bombardieri</div>
         <div class="text-three">WoozyStudio</div>
         <div class="text-four">From Adobly, Inc.</div>
       </div>
